[package]
name = "actixdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
actix-web-httpauth = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
env_logger = "0.9"
